--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,11 @@
 
 # dependencies
 /node_modules
+./ui/node_modules
+./server/node_modules
 /.pnp
 .pnp.js
-
+*/node_modules/*
 # testing
 /coverage
 
